@@ -54,7 +54,7 @@ public class Server {
         DummyExternalizable externalizable2 = new DummyExternalizable();
         externalizable2.put("a", "b");
         for (int i = 0; i < 1000; i++) {
-            externalizable2.put(new Integer(i), ""+System.currentTimeMillis()+"dfdsgfdhfghfgjgf");
+            externalizable2.put(Integer.valueOf(i), ""+System.currentTimeMillis()+"dfdsgfdhfghfgjgf");
         }
         externalizable.put("key", externalizable2);
 
